Fixed dynamic windows ratio bugs and added better visualization on smaller screens

--- a/Sorting-Visual/sorting.css
+++ b/Sorting-Visual/sorting.css
@@ -54,6 +54,15 @@ body {
   font-size: 16px;
 }
 
+.divider {
+  border-left:3px solid white;
+  position: absolute;
+  display: inline-block;
+  margin: auto;
+  top: 0px;
+  height: 52px;
+}
+
 .slidecontainer {
   width: 5%; /* Width of the outside container */
 }
@@ -98,6 +107,7 @@ body {
   outline-style: solid;
   outline-width: 1px;
   outline-color: black;
+  outline-offset: -1px;
   display: inline-block;
   text-align: center;
 }
@@ -110,7 +120,6 @@ body {
   text-align: center;
   display: inline-block;
   clear: both;
-  padding: -50px;
 }
 
 .createdBy {
